--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Xᴏᴜʟ-Mᴅ",
+    "name": "xoul-md",
     "version":"1.0.0",
     "description": "Xᴏᴜʟ Multi Device whatsappbot",
     "logo": "https://i.imgur.com/NlixkpK.jpeg",
